--- a/label_studio/tests/data_manager/filters/annotation_results.tavern.yml
+++ b/label_studio/tests/data_manager/filters/annotation_results.tavern.yml
@@ -32,7 +32,54 @@ stages:
       annotations:
         - completed_by:
             email: test_suites_user@heartex.com
-- name: create view with filter
+
+- name: create_annotation_with_empty_result
+  request:
+    url: "{django_live_url}/api/tasks/{task_pk}/annotations"
+    json:
+      lead_time: 4.134
+      project: !int "{project_pk}"
+      result: []
+    method: POST
+    headers:
+      content-type: application/json
+  response:
+    status_code: 201
+    save:
+      json:
+        empty_ano_id: "id"
+
+- name: create_annotation_with_two_results
+  request:
+    url: "{django_live_url}/api/tasks/{task_pk}/annotations"
+    json:
+      lead_time: 4.134
+      project: !int "{project_pk}"
+      result:
+        - value:
+            choices:
+              - neg
+          id: wMmVN7k_47
+          from_name: sentiment
+          to_name: text
+          type: choices
+        - value:
+            choices:
+              - pos
+          id: wMmVN7k_48
+          from_name: sentiment
+          to_name: text
+          type: choices
+    method: POST
+    headers:
+      content-type: application/json
+  response:
+    status_code: 201
+    save:
+      json:
+        annotation_pk: "id"
+
+- name: create view with filter annotations_results empty
   request:
     method: POST
     url: '{django_live_url}/api/dm/views'
@@ -52,16 +99,16 @@ stages:
       json:
         view_pk: id
 
-- name: get the views
+- name: get view with filter annotations_results empty
   request:
     method: GET
     url: '{django_live_url}/api/tasks?page=1&page_size=30&view={view_pk}&interaction=filter&project={project_pk}'
   response:
     status_code: 200
     json:
-      total: 0
+      total: 1
 
-- name: change filter to not empty
+- name: set filter to annotations_results not empty
   request:
     method: PUT
     url: '{django_live_url}/api/dm/views/{view_pk}?interaction=filter&project={project_pk}'
@@ -78,16 +125,23 @@ stages:
   response:
     status_code: 200
 
-- name: get the new view
+- name: get annotations_results not empty view
   request:
     method: GET
     url: '{django_live_url}/api/tasks?page=1&page_size=30&view={view_pk}&interaction=filter&project={project_pk}'
   response:
     status_code: 200
     json:
-      total: 1
+      total: 0
 
-- name: change filter to empty true
+- name: delete annotation
+  request:
+    method: DELETE
+    url: '{django_live_url}/api/annotations/{annotation_pk}'
+  response:
+    status_code: 204
+
+- name: change filter to empty true again
   request:
     method: PUT
     url: '{django_live_url}/api/dm/views/{view_pk}?interaction=filter&project={project_pk}'
@@ -104,21 +158,6 @@ stages:
   response:
     status_code: 200
 
-- name: get the new view
-  request:
-    method: GET
-    url: '{django_live_url}/api/tasks?page=1&page_size=30&view={view_pk}&interaction=filter&project={project_pk}'
-  response:
-    status_code: 200
-    json:
-      total: 0
-
-- name: delete anotation
-  request:
-    method: DELETE
-    url: '{django_live_url}/api/annotations/{annotation_pk}'
-  response:
-    status_code: 204
 
 - name: check empty count again
   request:
